Project

General

Profile

Actions

Bug #16689

closed

mkfs.xfs slow performance with discards and object map

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Examples:

object-map enabled:
time mkfs.xfs -s size=4096 -f /dev/sda
real 9m10.882s
user 0m0.000s
sys 0m0.012s

object-map disabled:
real 0m1.780s
user 0m0.000s
sys 0m0.012s


Files

replay.100G.slow.bin (19.5 KB) replay.100G.slow.bin Vaibhav Bhembre, 07/17/2016 12:29 AM
replay.100G.fast.bin (19.5 KB) replay.100G.fast.bin Vaibhav Bhembre, 07/17/2016 12:29 AM
lttng_trace_10G_objectmap_disabled_fast.tar.gz (16 KB) lttng_trace_10G_objectmap_disabled_fast.tar.gz Vaibhav Bhembre, 07/18/2016 02:38 PM
lttng_trace_10G_objectmap_enabled_slow.tar.gz (14.2 KB) lttng_trace_10G_objectmap_enabled_slow.tar.gz Vaibhav Bhembre, 07/18/2016 02:38 PM

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16867: jewel: mkfs.xfs slow performance with discards and object mapResolvedLoïc DacharyActions

Updated by Vaibhav Bhembre almost 8 years ago

I am attaching 2 files for lttng trace run captured while running: mkfs.xfs -s size=4096 -f /dev/sda.

  • replay.100G.slow.bin - trace with object-map enabled.
  • replay.100G.fast.bin - trace with object-map disabled.

Other images features that were common across both runs: layering, striping, exclusive-lock, deep-flatten.

size: 102400 MB in 25600 objects
order: 22 (4096 kB objects)
format: 2
flags:
stripe unit: 4096 kB
stripe count: 1

Let me know if I can provide anything else. Thanks.

Updated by Vaibhav Bhembre almost 8 years ago

Attaching the raw lttng files for librbd runs. The new image is 10G instead of the 100G in the previous case, but all other attributes should match up.

Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #4

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #16867: jewel: mkfs.xfs slow performance with discards and object map added
Actions #7

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF